syntax = "proto3";

package follow;

service FollowService {
    rpc GetFollow (FollowRequest) returns (Follow);
    rpc GetFollows (FollowsRequest) returns (FollowsResponse);
    rpc CreateFollow (FollowCreate) returns (Follow);
    rpc UpdateFollow (FollowUpdate) returns (Follow);
    rpc DeleteFollow (FollowDelete) returns (Follow);
}

message Follow {
    int32 id = 1;
    int32 followerId = 2;
    int32 followedId = 3;
}

message FollowRequest {
    int32 id = 1;
}

message FollowsRequest {}

message FollowsResponse {
    repeated Follow follows = 1;
}

message FollowCreate {
    int32 followerId = 1;
    int32 followedId = 2;
}

message FollowUpdate {
    int32 id = 1;
    optional int32 followerId = 2;
    optional int32 followedId = 3;
}

message FollowDelete {
    int32 id = 1;
}